--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,7 +26,7 @@
         <div id="header__main">
             <a href="/"><img src="/logo/logo.png" id="header__logo"></a>
             <nav>
-                <% if (isOwner == false) { %>
+                <% if (isOwner == false) {%>
                 <a href="/Board/list">커뮤니티</a>
                 <a href="/auth/sign_in">로그인</a>
                 <a href="/auth/sign_up">회원가입</a>
@@ -150,7 +150,7 @@
             <div id="footer__contact">
                 <p>고객센터</p>
                 <div id="footer__contact__kakao">
-                    <img src="img/kakaotalk_sharing_btn_medium.png" >
+                    <img src="img/kakao.png" >
                     <span>카카오톡 상담</span>
                 </div>
                 <span>평일 09:00 ~ 18:00(점심시간 13:00 ~ 14:00)</span>
