--- a/views/mypage.ejs
+++ b/views/mypage.ejs
@@ -26,7 +26,7 @@
         <div id="header__main">
             <a href="/"><img src="/logo/logo.png" id="header__logo"></a>
             <nav>
-                    <%= email %>
+                    <%= nick %>
                     <a href="/MyPage">마이페이지</a> 
                     <a href="/Calendar">운동달력</a> 
                     <a href="/Board/list">커뮤니티</a> 
