--- a/views/mypage.ejs
+++ b/views/mypage.ejs
@@ -45,7 +45,7 @@
                     </div>
                  
                     <div class="profile_name">
-                        <div class="pro_name"></div>
+                        <div class="pro_name"><%= name %></div>
                     </div>
                     <!-- <div class="my_pro">
                         나의 소개
@@ -67,7 +67,7 @@
                     <tr>
                         <td class="left_table">이메일</td>
                         <td class="right_table">
-                            <div class="table_in"></div>
+                            <div class="table_in"><%= email %></div>
                         </td>
                     </tr>
                     <tr>
@@ -84,32 +84,32 @@
                     <tr>
                         <td class="left_table">이름</td>
                         <td class="right_table">
-                            <div class="table_in"></div>
+                            <div class="table_in"><%= name %></div>
                         </td>
                     </tr>
                     <tr>
                         <td class="left_table">생일</td>
                         <td class="right_table">
-                            <div class="table_in"></div>
+                            <div class="table_in"><%= birth %></div>
                         </td>
                     </tr>
                     <form action="/auth/update_progress" method="post">
                     <tr>
                         <td class="left_table">닉네임</td>
                         <td class="right_table">
-                            <div class="table_in"></div>
+                            <div class="table_in"><%= nick %></div>
                         </td>
                     </tr>
                     <tr>
                         <td class="left_table">키</td>
                         <td class="right_table">
-                            <div class="table_in"></div>
+                            <div class="table_in"><%= height %></div>
                         </td>
                     </tr>
                     <tr>
                         <td class="left_table">몸무게</td>
                         <td class="right_table">
-                            <div class="table_in"></div>
+                            <div class="table_in"><%= weight %></div>
                         </td>
                     </tr>
                 </form>
