--- a/views/mypage.ejs
+++ b/views/mypage.ejs
@@ -93,7 +93,7 @@
                             <div class="table_in"><%= birth %></div>
                         </td>
                     </tr>
-                    <form action="/auth/update_progress" method="post">
+                    <form action="/auth/update" method="post">
                     <tr>
                         <td class="left_table">닉네임</td>
                         <td class="right_table">
@@ -118,10 +118,8 @@
                 
             </div>
         </div>
-        </div>
-        <div class="btn_ok">
-            <input type="submit" class="btn" value="확인">
-        </div>
+    </div>
+            <input type="submit" class="btn_ok" value="확인">
 
     </div>
     <footer>
