--- a/views/mypage.ejs
+++ b/views/mypage.ejs
@@ -97,19 +97,19 @@
                     <tr>
                         <td class="left_table">닉네임</td>
                         <td class="right_table">
-                            <div class="table_in"><%= nick %></div>
+                            <input type="text" class="table_in" id="table_input" placeholder="<%= nick %>">
                         </td>
                     </tr>
                     <tr>
                         <td class="left_table">키</td>
                         <td class="right_table">
-                            <div class="table_in"><%= height %></div>
+                            <input type="text" class="table_in" id="table_input" placeholder="<%= height %>">
                         </td>
                     </tr>
                     <tr>
                         <td class="left_table">몸무게</td>
                         <td class="right_table">
-                            <div class="table_in"><%= weight %></div>
+                            <input type="text" class="table_in" id="table_input" placeholder="<%= weight %>">
                         </td>
                     </tr>
                 </form>
