--- a/views/mypage.ejs
+++ b/views/mypage.ejs
@@ -97,29 +97,29 @@
                     <tr>
                         <td class="left_table">닉네임</td>
                         <td class="right_table">
-                            <div class="table_in"><%= nick %></div>
+                            <input type="text" class="table_in" id="table_input" value="<%= nick %>" name="nick">
                         </td>
                     </tr>
                     <tr>
                         <td class="left_table">키</td>
                         <td class="right_table">
-                            <div class="table_in"><%= height %></div>
+                            <input type="text" class="table_in" id="table_input" value="<%= height %>" name="height">
                         </td>
                     </tr>
                     <tr>
                         <td class="left_table">몸무게</td>
                         <td class="right_table">
-                            <div class="table_in"><%= weight %></div>
+                            <input type="text" class="table_in" id="table_input" value="<%= weight %>" name="weight">
                         </td>
                     </tr>
-                </form>
+                
                 </table>
 
                 
             </div>
         </div>
     </div>
-            <input type="submit" class="btn_ok" value="확인">
+            <input type="submit" class="btn_ok" value="확인"></form>
 
     </div>
     <footer>
