--- a/views/board_list.ejs
+++ b/views/board_list.ejs
@@ -38,102 +38,37 @@
             </nav>
         </div>
     </header>
-    <div class="board_wrap">
-        <div class="board_title">
-            커뮤니티
-        </div>
-        <div class="board_list_wrap">
-            <div class="board_list">
-                <div class="top">
-                    <div class="num"></div>
-                    <div class="title">제목</div>
-                    <div class="writer">작성자</div>
-                    <div class="date">작성일</div>
-                    <div class="count">조회</div>
-                </div>
-                <div>
-                    <div class="num">10</div>
-                    <div class="title"><a href="view.html">글 제목이 들어갑니다.</a></div>
-                    <div class="writer">강석주 바보</div>
-                    <div class="date">2022.11.11</div>
-                    <div class="count">33</div>
-                </div>
-                <div>
-                    <div class="num">9</div>
-                    <div class="title"><a href="view.html">글 제목이 들어갑니다.</a></div>
-                    <div class="writer">강석주 바보</div>
-                    <div class="date">2022.11.11</div>
-                    <div class="count">33</div>
-                </div>
-                <div>
-                    <div class="num">8</div>
-                    <div class="title"><a href="view.html">글 제목이 들어갑니다.</a></div>
-                    <div class="writer">강석주 바보</div>
-                    <div class="date">2022.11.11</div>
-                    <div class="count">33</div>
-                </div>
-                <div>
-                    <div class="num">7</div>
-                    <div class="title"><a href="view.html">글 제목이 들어갑니다.</a></div>
-                    <div class="writer">강석주 바보</div>
-                    <div class="date">2022.11.11</div>
-                    <div class="count">33</div>
-                </div>
-                <div>
-                    <div class="num">6</div>
-                    <div class="title"><a href="view.html">글 제목이 들어갑니다.</a></div>
-                    <div class="writer">강석주 바보</div>
-                    <div class="date">2022.11.11</div>
-                    <div class="count">33</div>
-                </div>
-                <div>
-                    <div class="num">5</div>
-                    <div class="title"><a href="view.html">글 제목이 들어갑니다.</a></div>
-                    <div class="writer">최지혜</div>
-                    <div class="date">2022.11.11</div>
-                    <div class="count">33</div>
-                </div>
-                <div>
-                    <div class="num">4</div>
-                    <div class="title"><a href="view.html">글 제목이 들어갑니다.</a></div>
-                    <div class="writer">강석주</div>
-                    <div class="date">2022.11.11</div>
-                    <div class="count">33</div>
-                </div>
-                <div>
-                    <div class="num">3</div>
-                    <div class="title"><a href="view.html">글 제목이 들어갑니다.</a></div>
-                    <div class="writer">강석주</div>
-                    <div class="date">2022.11.11</div>
-                    <div class="count">33</div>
-                </div>
-                <div>
-                    <div class="num">2</div>
-                    <div class="title"><a href="view.html">글 제목이 들어갑니다.</a></div>
-                    <div class="writer">강석주</div>
-                    <div class="date">2022.11.11</div>
-                    <div class="count">33</div>
-                </div>
-                <div>
-                    <div class="num">1</div>
-                    <div class="title"><a href="view.html">글 제목이 들어갑니다.</a></div>
-                    <div class="writer">강석주 바보</div>
-                    <div class="date">2022.11.11</div>
-                    <div class="count">33</div>
-                </div>
-                
-            </div>
-            <div class="board_page">
-                <a href="#" class="bt first"><<</a>
-                <a href="#" class="bt prev"><</a>
-                <a href="#" class="num on">1</a>
-                <a href="#" class="num">2</a>
-                <a href="#" class="num">3</a>
-                <a href="#" class="num">4</a>
-                <a href="#" class="num" id="five">5</a>
-                <a href="#" class="bt next">></a>
-                <a href="#" class="bt last">>></a>
-            </div>
+    <table border="1" style="width:600px">
+		<colgroup>
+			<col width='8%' />
+			<col width='*%' />
+			<col width='15%' />
+			<col width='15%' />
+		</colgroup>
+		<thead>
+			<tr>
+				<th>No.</th> 
+				<th>Title</th>
+				<th>Writer</th>
+				<th>Date</th>
+			</tr>
+		</thead>
+		<tbody>
+		<%
+			 for(var i=0; i<rows.length; i++) {
+		%>
+			<tr>
+				<td><%=rows.length-i%></td>
+				<td><a href='/board/view?brdno=<%=rows[i].brdno%>'><%=rows[i].brdtitle%></a></td>
+				<td><%=rows[i].nick%></td>
+				<td><%=rows[i].brddate%></td>
+			</tr>
+		<%
+			 }
+		%>
+		</tbody>
+	</table>    
+
             <% if (isOwner == true) {%>
             <div class="bt_wrap">
                 <a href="/board/Write" class="on">글 작성</a>
