--- a/views/board_write.ejs
+++ b/views/board_write.ejs
@@ -24,17 +24,11 @@
         <div id="header__main">
             <a href="/"><img src="aa.png" id="header__logo"></a>
             <nav>
-                <% if(isOwner == false) {%>
-                    <a href="/Board/list">커뮤니티</a> 
-                    <a href="/auth/sign_in">로그인</a>
-                    <a href="/auth/sign_up">회원가입</a>
-                    <% }else{ %>
                         <%= nick %>
                         <a href="/MyPage">마이페이지</a> 
                         <a href="/Calendar">운동달력</a> 
                         <a href="/Board/list">커뮤니티</a> 
                         <a href="/auth/logout">로그아웃</a>   
-                        <% } %>
             </nav>
         </div>
     </header>
@@ -43,12 +37,13 @@
             <strong>커뮤니티</strong>
             <p</p>
         </div>
+        <form name="save" action="/board/save" method="post">
         <div class="board_write_wrap">
             <div class="board_write">
                 <div class="title">
                     <dl>
                         <dt>제목</dt>
-                        <dd><input type="text" placeholder="제목 입력"></dd>
+                        <dd><input type="text" name="brdtitle"  value="<%=row.brdtitle%>"></dd>
                     </dl>
                 </div>
                 <div class="info">
@@ -56,30 +51,20 @@
                     <div class="info_wrap">
                     <dt>상태</dt>
                     
-                    <dd><div class="info_status"><input type="radio" name="check" value="정보" class="status">정보</div>
-                    <dd><div class="info_match"><input type="radio" name="check" value="구인" class="match">구인</div>
+                    <dd><div class="info_status"><input type="radio" name="category" value="정보" class="status">정보</div>
+                    <dd><div class="info_match"><input type="radio" name="category" value="구인" class="match">구인</div>
                     </div>
                     </dl>
                 </div>
-                <!-- <div class="info">
-                    <dl>
-                        <dt>작성자</dt>
-                        <dd><input type="text" placeholder="작성자 입력"></dd>
-                    </dl>
-                    <dl>
-                        <dt>비밀번호</dt>
-                        <dd><input type="password" placeholder="비밀번호 입력"></dd>
-                    </dl>
-                </div> -->
                 <div class="cont">
-                    <textarea placeholder="내용 입력"></textarea>
+                    <textarea name="brdmemo"><%=row.brdmemo%></textarea>
                 </div>
             </div>
             <div class="bt_wrap">
-                <a href="view.html" class="on">등록</a>
-                <a href="list.html">취소</a>
+                <input type="submit" value="등록">
+                <a href="/board/list">취소</a>
             </div>
-        </div>
+        </div></form>
     </div>
     <footer>
         <div>
