--- a/views/board_write.ejs
+++ b/views/board_write.ejs
@@ -64,7 +64,8 @@
                 <input type="submit" value="등록">
                 <a href="/board/list">취소</a>
             </div>
-        </div></form>
+        </div>
+        <input type="hidden" name="brdno" value="<%=row.brdno%>"> </form>
     </div>
     <footer>
         <div>
