--- a/public/css/commu_style.css
+++ b/public/css/commu_style.css
@@ -67,31 +67,33 @@ a {
     margin-left: 0;
 }
 
-.bt_wrap a.on {
+.bt_wrap > .on {
     border-color: white;
     background: rgb(62, 176, 247);
     color: #fff;
+    width: 102px;
+    height: 42px;
+    border: 0;
 }
 
-.board_list {
+.board_list, thead {
     width: 100%;
     border-top: 2px solid rgb(164, 216, 241);
 }
 
-.board_list > div {
+.board_list > tr,td {
     border-bottom: 1px solid rgb(238, 238, 238);
-    font-size: 0;
 }
 
-.board_list > div.top {
+.board_list > thead.top {
     border-bottom: 1px solid rgb(164, 216, 241);
 }
 
-.board_list > div:last-child {
+.board_list > tr:last-child {
     border-bottom: 1px solid rgb(238, 238, 238);
 }
 
-.board_list > div > div {
+.board_list > tr > tr {
     display: inline-block;
     padding: 15px 0;
     text-align: center;
@@ -179,10 +181,11 @@ a {
 }
 
 .board_view .title {
-    padding: 20px 15px;
+
     border-bottom: 1px dashed rgb(164, 216, 241);
     font-size: 2rem;
 }
+
 
 .board_view .info {
     padding: 15px;
@@ -190,17 +193,21 @@ a {
     font-size: 0;
 }
 
-.board_view .info dl {
+.board_view .info dl,
+.board_view .title dl {
     position: relative;
     display: inline-block;
     padding: 0 20px;
 }
 
-.board_view .info dl:first-child {
+
+.board_view .info dl:first-child,
+.board_view .title dl:first-child {
     padding-left: 0;
 }
 
-.board_view .info dl::before {
+.board_view .info dl::before,
+.board_view .title dl::before {
     content: "";
     position: absolute;
     top: 1px;
@@ -211,7 +218,8 @@ a {
     background: #ddd;
 }
 
-.board_view .info dl:first-child::before {
+.board_view .info dl:first-child::before
+.board_view .title dl:first-child::before {
     display: none;
 }
 
@@ -220,9 +228,14 @@ a {
     display: inline-block;
     font-size: 1.4rem;
 }
+.board_view .title dl dt,
+.board_view .title dl dd{
+    display: inline-block;
+    font-size: 20px;
+}
 
-
-.board_view .info dl dd {
+.board_view .info dl dd,
+.board_view .title dl dd {
     margin-left: 10px;
     color: #777;
 }
@@ -256,10 +269,14 @@ a {
 
 .board_write .title dl {
     font-size: 0;
+    display: flex;
+    width: 100%;
+    vertical-align: middle;
+
 }
 
 .board_write .info dl {
-    display: inline-block;
+    display: flex;
     width: 50%;
     vertical-align: middle;
 }
@@ -276,6 +293,7 @@ a {
 .board_write .title dt,
 .board_write .info dt {
     width: 100px;
+    float: left;
 }
 
 .board_write .title dd {
@@ -311,3 +329,46 @@ a {
 .match{
     margin-left: 40px;
 }
+
+.table{
+    width: 1000px;
+    margin-left: 50px;
+}
+
+tr{
+    height: 30px;
+    font-size: 12px;
+}
+
+.num, .writer, .date, .title{
+    text-align: center;
+}
+
+.top > .num, .top > .writer, .top > .date, .top > .title{
+    border-bottom: 1px solid rgb(164, 216, 241);
+}
+
+.bt_wrap > a.on {
+    border-color: white;
+    background: rgb(62, 176, 247);
+    color: #fff;
+    width: 80px;
+    height: 22px;
+    border: 0;
+}
+
+.on:active{
+    background: rgb(110, 194, 246);
+}
+
+.info_wrap{
+    margin-left: 36px;
+}
+
+#view_title{
+    text-align: left;
+    display: block;
+    margin-left: 12px;
+}
+
+
