--- a/views/board_write.ejs
+++ b/views/board_write.ejs
@@ -22,7 +22,7 @@
             </a>
         </div>
         <div id="header__main">
-            <a href="/"><img src="aa.png" id="header__logo"></a>
+            <a href="/"><img src="/logo/logo.png" id="header__logo"></a>
             <nav>
                         <%= nick %>
                         <a href="/MyPage">마이페이지</a> 
@@ -61,7 +61,7 @@
                 </div>
             </div>
             <div class="bt_wrap">
-                <input type="submit" value="등록">
+                <input type="submit" value="등록" class="on">
                 <a href="/board/list">취소</a>
             </div>
         </div>
