--- a/views/board_view.ejs
+++ b/views/board_view.ejs
@@ -56,7 +56,7 @@
                     </dl>
                     <dl>
                         <dt>작성자</dt>
-                        <dd><%= nick %></dd>
+                        <dd><%= row.nick %></dd>
                     </dl>
                     <dl>
                         <dt>작성일</dt>
@@ -73,7 +73,7 @@
             </div>
             <div class="bt_wrap">
                 <a href="/board/list" class="on">목록</a>
-                <% if (row.email = email) {%> 
+                <% if (row.email == email) {%> 
                 <a href="Delete?brdno=<%=row.brdno%>">삭제</a>
 		        <a href="write?brdno=<%=row.brdno%>">수정</a>
                 <%} %>
