--- a/views/board_write.ejs
+++ b/views/board_write.ejs
@@ -51,7 +51,7 @@
                     <div class="info_wrap">
                     <dt>상태</dt>
                     
-                    <dd><div class="info_status"><input type="radio" name="category" value="정보" class="status">정보</div>
+                    <dd><div class="info_status"><input type="radio" name="category" value="정보" class="status" required>정보</div>
                     <dd><div class="info_match"><input type="radio" name="category" value="구인" class="match">구인</div>
                     </div>
                     </dl>
