--- a/public/css/commu_style.css
+++ b/public/css/commu_style.css
@@ -79,6 +79,7 @@ a {
 .board_list, thead {
     width: 100%;
     border-top: 2px solid rgb(164, 216, 241);
+    border-collapse: collapse;
 }
 
 .board_list > tr,td {
