--- a/views/board_view.ejs
+++ b/views/board_view.ejs
@@ -67,7 +67,7 @@
                     </dl>
                     <dl>
                         <dt>조회</dt>
-                        <dd>33</dd>
+                        <dd><%=row.view%></dd>
                     </dl>
                 </div>
                 <div class="cont">
