--- a/views/board_list.ejs
+++ b/views/board_list.ejs
@@ -65,7 +65,7 @@
          <tr>
             <td class="num"><%=rows.length-i%></td>
             <td class="category"><%=rows[i].category%></td>
-            <td class="title"><a href='/board/view?brdno=<%=rows[i].brdno%>'><%=rows[i].brdtitle%></a></td>
+            <td class="title"><a href='/board/view?brdno=<%=rows[i].brdno%>'  id="main_title"><%=rows[i].brdtitle%></a></td>
             <td class="writer"><%=rows[i].nick%></td>
             <td class="date"><%=rows[i].brddate%></td>
          </tr>
