--- a/views/index.ejs
+++ b/views/index.ejs
@@ -63,14 +63,30 @@
         </section>
         <hr>
         <section id="main__section2">
-            <span class="desc-big">
+            <span class="desc-big"
+            data-aos="fade-up" 
+            data-aos-offset="200" 
+            data-aos-easing="ease-out-cubic"
+            data-aos-duration="1600">>
                 어떤 운동을 할지 고민이라면, 내 몸에 더 잘 맞는<br>
                 <strong>해야짐</strong>을 시작하세요!
             </span>
-            <span id="main__section2__check">
-                <i class="fa-solid fa-check"></i>
+            <span id="main__section2__check"
+            data-aos="fade-up" 
+            data-aos-offset="200" 
+            data-aos-easing="ease-out-cubic"
+            data-aos-duration="1600">
+                <i class="fa-solid fa-check"
+                data-aos="fade-up" 
+                data-aos-offset="200" 
+                data-aos-easing="ease-out-cubic"
+                data-aos-duration="1600"></i>
             </span>
-            <p>
+            <p
+            data-aos="fade-up" 
+            data-aos-offset="200" 
+            data-aos-easing="ease-out-cubic"
+            data-aos-duration="1600">
                 누구에게나 똑같은 운동은 그만!<br>
                 운동 종류, 운동 횟수, 동작까지<br>
                 나에게 맞는 맞춤 운동을 만나보세요.
